<resources>
    <string name="app_name">CalculatorSimple</string>
    <string name="action_settings">Settings</string>
    <string name="clear_text">C</string>
    <string name="divide_text">/</string>
    <string name="percent_text">%</string>
    <string name="toggle_sign_text">+/-</string>
    <string name="multiply_text">*</string>
    <string name="plus_text">+</string>
    <string name="subtract_text">-</string>
    <string name="equal_text">=</string>
    <string name="expo_text">^</string>
    <string name="point_text">.</string>
    <string name="zero_text">0</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>


    <string name="button_area">Area</string>
    <string name="button_length">Length</string>
    <string name="button_volume">Volume</string>
    <string name="button_weight">Weight</string>
    <string name="button_temperature">Temperature</string>

    <string name="unit_prompt">Choose a unit</string>
    <string-array name="unit_array">
        <item>Metres</item>
        <item>Millimetres</item>
        <item>Centermetres</item>
        <item>Kilometres</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Miles</item>
    </string-array>






    <string name="button_basic">BASIC</string>
    <string name="button_unit">UNIT</string>
    <string name="button_sci">SCI</string>
    <string name="button_programme">PROGRAM</string>

    <string name="title_activity_unit">Unit</string>




</resources>
