
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/UnitInputTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:textSize="@dimen/display_font"
            android:background="@color/express_back_color"
            android:textColor="@color/express_color"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/UnitOutputTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoText="true"
            android:textSize="@dimen/display_font"
            android:background="@color/result_back_color"
            android:textColor="@color/result_color"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="right"
            android:layout_gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:entries="@array/unit_array"
            android:prompt="@string/unit_prompt"
            />
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:entries="@array/unit_array"
            android:prompt="@string/unit_prompt"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_length"
            android:onClick="Length"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_area"
            android:onClick="Area"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_volume"
            android:onClick="Volume"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_weight"
            android:onClick="Weight"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn7OnClick"
            android:text="@string/seven_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn8OnClick"
            android:text="@string/eight_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn9OnClick"
            android:text="@string/nine_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn4OnClick"
            android:text="@string/four_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn5OnClick"
            android:text="@string/five_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn6OnClick"
            android:text="@string/six_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn1OnClick"
            android:text="@string/one_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn2OnClick"
            android:text="@string/two_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn3OnClick"
            android:text="@string/three_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnPointOnClick"
            android:text="@string/point_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn0OnClick"
            android:text="@string/zero_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClearOnClick"
            android:text="@string/clear_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_basic"
            android:onClick="Basic"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_unit"
            android:onClick="Unit"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sci"
            android:onClick="Scientific"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_programme"
            android:onClick="Programme"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>