<?xml version="1.0" encoding="utf-8"?>

<!--
/*1.  Issue 00011: Gu Xin, April 27, 2016
*     Use Linear Layout instead of Grid Layout, to have full screen for different screen densities.
      Change the background color
      change button expressions of colors dimensions, reference to dimens.xml & colors.xml

* */
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/expressionTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:textSize="@dimen/display_font"
            android:background="@color/express_back_color"
            android:textColor="@color/express_color"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoText="true"
            android:textSize="@dimen/display_font"
            android:background="@color/result_back_color"
            android:textColor="@color/result_color"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="right"
            android:layout_gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClearOnClick"
            android:text="@string/clear_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <Button
            android:id="@+id/btnToggleSign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnToggleSignOnClick"
            android:text="@string/toggle_sign_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnPercentOnClick"
            android:text="@string/percent_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />


        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:onClick="btnDivideOnClick"
            android:text="@string/divide_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn7OnClick"
            android:text="@string/seven_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn8OnClick"
            android:text="@string/eight_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn9OnClick"
            android:text="@string/nine_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnMulitply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnMultiplyOnClick"
            android:text="@string/multiply_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"

            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn4OnClick"
            android:text="@string/four_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn5OnClick"
            android:text="@string/five_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn6OnClick"
            android:text="@string/six_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnSubtractOnClick"
            android:text="@string/subtract_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn1OnClick"
            android:text="@string/one_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn2OnClick"
            android:text="@string/two_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn3OnClick"
            android:text="@string/three_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnPlusOnClick"
            android:text="@string/plus_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnPointOnClick"
            android:text="@string/point_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btn0OnClick"
            android:text="@string/zero_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnExpo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnExpoOnClick"
            android:text="@string/expo_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/number_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnCalcOnClick"
            android:text="@string/equal_text"
            android:textSize="@dimen/display_font"
            android:textColor="@color/function_color"
            android:background="@drawable/botton"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


</LinearLayout>